--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run dev\" \"json-server --watch db.json\""
   },
   "dependencies": {
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "concurrently": "^7.6.0",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13.0.6",
     "next": "^13.0.6",
