--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "concurrently \"npm run dev\" \"json-server --watch db.json\""
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "concurrently": "^7.6.0",
